--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,20 @@
   </head>
 
   <body>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    <%if user_signed_in? %>
+      <li class="col-md">
+        <%=link_to "Cerrar Sesion",  destroy_user_session_path, method: :delete%>
+      </li>
+    <%else%>
+      <li class="col-md">
+        <%=link_to "Iniciar Sesion",  new_user_session_path%>
+      </li>
+      <li class="col-md">
+        <%=link_to "Crear Cuenta",  new_user_registration_path%>
+      </li>
+    <%end%>
     <%= yield %>
   </body>
 </html>
