--- a/app/views/layouts/_feedHome.html.erb
+++ b/app/views/layouts/_feedHome.html.erb
@@ -1,5 +1,5 @@
 <% if @feed_items.any? %> 
-  <ol class="posts">
+  <ol class="post">
     <%= render @feed_items %> 
   </ol>
   <%= will_paginate @feed_items, params: { controller: :static_pages, action: :home } %>
