--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
 <li id="post-<%= post.id %>">
-  <span class="user"><%= post.user.name %></span> 
+  <span class="user"><%= "Posted by: #{post.user.name} #{post.user.lastname}"%></span>
   <span class="content"><%= post.content %></span>
   <span 
     class="timestamp">Posted <%= time_ago_in_words(post.created_at) %> ago.
