Finish feature Expiration Date

--- a/app/views/layouts/_post_form.html.erb
+++ b/app/views/layouts/_post_form.html.erb
@@ -1,7 +1,10 @@
 <%= form_with(model: @post, local: true) do |f| %> 
-  <%= render 'layouts/error_messages', object: f.object %> <div class="field">
-  <%= f.text_area :content, placeholder: "Hey! What's up?" %> </div>
+  <%= render 'layouts/error_messages', object: f.object %>
+  <div class="field">
+    <%= Time.zone.now.strftime("%F  %I:%M %P") %>
+    <%= f.text_area :content, placeholder: "Hey! What's up?" %> 
+  </div>
   <%= f.label :expiration, "Choose an expiration date:" %>
-  <%= f.date_field :expirationDate %>
+  <%= f.datetime_field :expirationDate %>
   <%= f.submit "Post", class: "btn btn-primary" %> 
 <% end %>
