--- a/app/views/layouts/_feedHome.html.erb
+++ b/app/views/layouts/_feedHome.html.erb
@@ -2,5 +2,5 @@
   <ol class="post">
     <%= render @feed_items %> 
   </ol>
-  <%= will_paginate @feed_items, params: { controller: :static_pages, action: :home } %>
+  <%= will_paginate @feed_items, params: { controller: :pages, action: :home } %>
 <% end %>
