--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -67,7 +67,7 @@ p {
     color: white;
     text-transform: uppercase;
     letter-spacing: -1px;
-    padding-top: 9px;
+    padding-top: 18px;
     font-weight: bold;
     &:hover {
         color: white;
@@ -105,7 +105,6 @@ aside {
         margin-top: 20px;
     }
     section {
-        padding: 10px 0;
         margin-top: 20px;
         &:first-child {
             border: 0;
@@ -115,9 +114,13 @@ aside {
             display: block;
             margin-bottom: 3px;
             line-height: 1;
+            font-size: 1.5em;
+            font-style: italic;
+            font-weight: 200;
+            color: #337ab7;
         }
         h1 {
-            font-size: 1.4em;
+            font-size: 2.5em;
             text-align: left;
             letter-spacing: -1px;
             margin-bottom: 3px;
@@ -133,7 +136,6 @@ textarea,
 select,
 .uneditable-input {
     border: 1px solid #bbb;
-    width: 100%;
     margin-bottom: 15px;
     box-sizing: border-box;
     ;
@@ -178,25 +180,16 @@ input {
     list-style: none;
     padding: 0;
     li {
-        padding: 10px 0;
         border-top: 1px solid #e8e8e8;
     }
     .user {
-        margin-top: 5em;
-        padding-top: 0;
+        padding-top: 5px;
     }
     .content {
         display: block;
-        margin-left: 60px;
-        img {
-            display: block;
-            padding: 5px 0;
-        }
     }
     .timestamp {
         color: $gray-light;
-        display: block;
-        margin-left: 60px;
     }
 }
 
@@ -205,4 +198,27 @@ aside {
         height: 100px;
         margin-bottom: 5px;
     }
+}
+
+.flex-panel {
+    display: flex;
+    justify-content: space-between;
+}
+
+.expiration {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    font-style: italic;
+    font-weight: 200;
+    font-size: small;
+}
+
+.new_user {
+    width: 50%;
+    margin: 5em auto 0;
+}
+
+.row {
+    margin-top: 5em;
 }
