--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-<footer class="footer">
-  <h4>Realizado por Daniel Buriticá</h4>
+<footer class="py-3 my-4">
+  <h4 class="text-center text-muted">Realizado por Daniel Buriticá</h4>
 </footer>
