--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,11 +5,11 @@
       <ul class="nav navbar-nav navbar-right">
         <%if user_signed_in? %>
           <li>
-            <%=link_to "Cerrar Sesion",  destroy_user_session_path, method: :delete%>
+            <%=link_to "Cerrar Sesion",  destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn"%>
           </li>
         <%else%>
           <li>
-            <%=link_to "Iniciar Sesion",  new_user_session_path%>
+            <%=link_to "Iniciar Sesion",  new_user_session_path, class: "btn btn-default navbar-btn" %>
           </li>
         <%end%>
       </ul>
