--- a/app/views/layouts/_user_info.html.erb
+++ b/app/views/layouts/_user_info.html.erb
@@ -1,2 +1,2 @@
-<h1><%= current_user.name %></h1>
+<h1>Welcome, <%= current_user.name %>!</h1>
 <span><%= pluralize(current_user.posts.count, "post") %></span>
