--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
     </div>
   </div>
 <% else %>
-  <div class="center jumbotron">
+  <div class="center jumbotron" style="margin-top: 5em">
     <h1>Welcome to the Project Two!</h1>
     <h2>This is the home page</h2>
     <%= link_to "Sign up now!", new_user_registration_path, class: "btn btn-lg btn-primary" %> 
