--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,15 @@
       <ul class="nav navbar-nav navbar-right">
         <%if user_signed_in? %>
           <li>
+            <%=link_to "All Posts",  root_url, class: "btn btn-default navbar-btn"%>
+          </li>
+          <li>
+            <%=link_to "Seen Posts",  feed_path, class: "btn btn-default navbar-btn"%>
+          </li>
+          <li>
+            <%=link_to "My Posts",  profile_path, class: "btn btn-default navbar-btn"%>
+          </li>
+          <li>
             <%=link_to "Cerrar Sesion",  destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn"%>
           </li>
         <%else%>
