--- a/app/views/pages/feed.html.erb
+++ b/app/views/pages/feed.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? %> 
   <div class="row">
     <div class="col-md-12">
-      <h3>Posts</h3>
+      <h3>Seen Posts</h3>
       <%= render 'layouts/feed_seen' %> 
     </div>
   </div>
