--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,7 +8,7 @@
     <%= render 'layouts/post_form' %> </section>
     </aside>
     <div class="col-md-8">
-      <h3>Posts</h3>
+      <h3>Total Posts (<%= @total_posts %>) - Seen Posts (<%= @total_seenPosts %>)</h3>
       <%= render 'layouts/feedHome' %> 
     </div>
   </div>
