Improve some details

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,7 +4,8 @@
     <div>
       <% if current_user.id == post.user.id %>
         <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
-      <% else %>
+      <% end %>
+      <% if !current_page?(feed_path) %>
         <%= link_to "Mark as Seen", seen_path(post: post.id), class: "btn btn-primary" %>
       <% end %>
     </div>
