--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,11 +14,11 @@
             <%=link_to "My Posts",  profile_path, class: "btn btn-default navbar-btn"%>
           </li>
           <li>
-            <%=link_to "Cerrar Sesion",  destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn"%>
+            <%=link_to "Log Out",  destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn"%>
           </li>
         <%else%>
           <li>
-            <%=link_to "Iniciar Sesion",  new_user_session_path, class: "btn btn-default navbar-btn" %>
+            <%=link_to "Sign In",  new_user_session_path, class: "btn btn-default navbar-btn" %>
           </li>
         <%end%>
       </ul>
