Change posts buttons

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -2,11 +2,15 @@
   <div class="panel-heading flex-panel">
     <span class="user panel-title"><%= "Posted by: #{post.user.name} #{post.user.lastname}"%></span>
     <div>
-      <% if current_user.id == post.user.id %>
+      <% if current_page?(root_url) %>
+        <% if current_user.id == post.user.id %>
+          <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
+        <% else %>
+          <%= link_to "Mark as Seen", seen_path(post: post.id), class: "btn btn-primary" %>
+        <% end %>
+      <% else if current_page?(profile_path) %>
         <%= link_to "Delete", post, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
       <% end %>
-      <% if !current_page?(feed_path) %>
-        <%= link_to "Mark as Seen", seen_path(post: post.id), class: "btn btn-primary" %>
       <% end %>
     </div>
   </div>
